# datascientest_supply_chain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  MLproject  Makefile  RAPPORT_FINAL_VALIDATION.md  README.md  README_EXPERT.md  ROADMAP.md  Satisfaction client.md  TODO.md  TODO_FINAL.md  cahier_des_charges_example.txt  cahier_des_charges_expert.md  cahier_des_charges_sample.md  coverage.xml  docker-compose.staging.yml  docker-compose.yml  performance_test.py  pyproject.toml  refactoring_plan.md  requirements.txt  setup.cfg  setup_project.py  start_services.py  validate_structure.py  veille.md
.github/workflows/: ci.yml  ci_cd.yml
apprendre/: glossary_et_notes.md
core/application/: __init__.py  services.py
core/domain/interfaces/: repositories.py  services.py
core/domain/models/: review.py
core/infrastructure/: __init__.py  repositories.py  services.py
core/mlops/: __init__.py  model_registry.py  monitoring.py
core/services/: config.py  dependency_injection.py  service_configuration.py
core/usecases/: sentiment_analysis.py
infrastructure/database/postgresql/: init.sql
notebooks/: 00_exploration.ipynb  01_cadrage_kpi.ipynb  02_mvp_fonctionnalites.ipynb  03_demo_expert.ipynb
presentation/api/: fastapi_app.py
presentation/dash/: streamlit_app.py
scrapers/: base_scraper.py  run_scrapers.py
scrapers/google/: google_scraper.py
scrapers/trustpilot/: trustpilot_scraper.py
scrapers/twitter/: twitter_scraper.py
scripts/: log_metrics.py  migrate_legacy.py
src/: api.py  clean_reviews.py  collect_reviews.py  collect_trustpilot.py  dashboard.py  dashboard_expert.py  sentiment_motifs.py
tests/: test_api.py  test_clean_reviews.py  test_performance.py  test_sentiment_motifs.py
tests/integration/: __init__.py  test_infrastructure.py  test_mlops_integration.py
tests/unit/: test_domain_models.py
